# alpaca

./: .gitignore  README.md  alpaca.conf  alpaca.conf.example  alpaca.py  apbuild.py  apcommand.py  apinstall.py  apupdate.py  pyproject.toml
alpaca/: configuration.py  logging.py  main.py  package.py  package_description.py  package_manager.py  repository.py  utils.py
alpaca/apbuild/: apbuild_main.py
alpaca/apcommand/: apcommand_main.py
alpaca/apinstall/: main.py
alpaca/common/: alpaca_application.py  alpaca_tools.py  repository_cache.py  tar.py
alpaca/configuration/: configuration.py  repository_ref.py
alpaca/recipes/: package_file_info.py  recipe_context.py  recipe_description.py  recipe_version.py
