[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca"
version = "0.1.2"
description = "Aleya Linux PAckage Assistant"
authors = [{name = "Robin 'Ruadeil' Degen", email = "mail@rudeil.lgbt"}]
dependencies = []

[project.scripts]
alpaca = "alpaca.main:main"
